Change name to Convenient Lithuanian

--- a/ConvenientLithuanian.bundle/Contents/Info.plist
+++ b/ConvenientLithuanian.bundle/Contents/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>org.sil.ukelele.keyboardlayout.centraleuropean</string>
 	<key>CFBundleName</key>
-	<string>RationalLithuanian</string>
+	<string>ConvenientLithuanian</string>
 	<key>CFBundleVersion</key>
 	<string></string>
 	<key>KLInfo_Lithuanian</key>
