--- a/ConvenientLithuanian.bundle/Contents/version.plist
+++ b/ConvenientLithuanian.bundle/Contents/version.plist
@@ -5,7 +5,7 @@
 	<key>BuildVersion</key>
 	<string></string>
 	<key>ProjectName</key>
-	<string>RationalLithuanian</string>
+	<string>Convenient-Lithuanian</string>
 	<key>SourceVersion</key>
 	<string></string>
 </dict>
